--- a/src/main/webapp/frontend/src/css/common.css
+++ b/src/main/webapp/frontend/src/css/common.css
@@ -248,3 +248,13 @@ video {
 	position:relative;
 	top:100px;
 }
+
+.qtableplace{
+	position:relative;
+	top:150px;
+}
+
+.qnainsertbtn{
+	position:relative;
+	top:-60px;
+}
